f2c_path_generator: add get_tiara_path method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ install(PROGRAMS
   scripts/record
   scripts/path_from_swaths
   scripts/planner
+  scripts/merge
   DESTINATION lib/${PROJECT_NAME}
 )
 
